Replace inventory manager with lead rotator role
